# word2ipa_rus

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt
nn_training/: all_ipa_as_array_with_accents_short.pickle  requirements.txt  stressed_word_2_ipa.ipynb
nn_training/Model_word_stressed2IPA/: keras_metadata.pb  saved_model.pb
nn_training/Model_word_stressed2IPA/variables/: variables.index
tests/: test_ipa_processing.py  test_word2ipa_rus.py  test_word_processing.py
word2ipa_rus/: model_word2ipa_rus.h5  word2ipa.py
word2ipa_rus/utils/: ipa_processing.py  word_processing.py
